--- a/style.css
+++ b/style.css
@@ -2,49 +2,46 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(176, 232, 241);
     font-family: 'Comfortaa', sans-serif;
-    font-size: 1vw;
+    font-size: 15px;
     font-weight: 400;
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(176, 232, 241);
     height: 100vh;
     width: 100%;
     height: auto;
     position: relative;
-    overflow-y: scroll;
-    padding-bottom: 20px;
 }
 
 header {
     width: 100%;
     position: absolute;
-    top: 3px;
+    top: 5px;
     color: rgb(126, 213, 226);
     background-color: rgb(126, 213, 226);
     box-shadow: 5px 5px 15px cornflowerblue;
 }
 
 h1 {
-    font-size: 2vw;
+    font-size: 25px;
     font-weight: 500;
-    margin-bottom: 1.5vw;
+    margin-bottom: 30px;
 }
 
 h2 {
-    font-size: 1.5vw;
+    font-size: 19px;
     font-weight: 500;
-}
-
-.container {
-    padding: 3.5vw 20vw;
 }
 
 
 .photo {
-    height: 22vw;
-    width: 22vw;
+    height: 300px;
+    width: 300px;
     background-image: url(./assets/liliya.jpg);
     background-position: center;
     background-size: cover;
@@ -53,9 +50,8 @@ h2 {
 }
 
 .contacts-icon {
-    width: 3.5vw;
-    height: 3.5vw;
-    margin-right: 2.5vw;
+    width: 45px;
+    height: 45px;
     transition: all .5s;
     border-radius: 50%;
     border: 1px dotted #6495ed;
@@ -67,32 +63,13 @@ h2 {
     filter: drop-shadow(10px 5px 10px #6495ed);
 }
 
-.container,
-.titles-and-contents {
-    display: flex;
-    gap: 5vw;
-}
-
 .info {
     position: relative;
 }
 
-.info,
-.titles,
-.contents {
-    display: flex;
-    flex-direction: column;
-    gap: 1vw;
-}
-
-.logo-and-name {
-    display: flex;
-    align-items: center;
-    margin-bottom: 1vw;
-}
 
 .logo {
-    width: 3vw;
+    width: 35px;
 }
 
 .title {
@@ -101,14 +78,100 @@ h2 {
 
 .line {
     margin: 0 auto;
-    width: 90%;
+    width: 100%;
     background-color: #77a1f0;
     height: 1px;
 }
 
 footer {
-    margin-bottom: -10px;
+    width: 100%;
+    margin-bottom: -50px;
     color: cornflowerblue;
     background-color: cornflowerblue;
     box-shadow: 8px 12px 21px 6px rgb(28, 7, 29);
+}
+
+.titles,
+.contents {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.titles-and-contents {
+    display: flex;
+    gap: 5vw;
+}
+
+.logo-and-name {
+    display: flex;
+    align-items: center;
+}
+
+.container1 {
+    display: flex;
+    gap: 5vw;
+    padding: 50px 0 20px 0;
+}
+
+.container2,
+.container3 {
+    padding: 20px 0 20px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.container4 {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    padding: 20px 0 70px 0;
+}
+
+.photo-and-icons {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    align-items: center;
+}
+
+.contacts-icons {
+    display: flex;
+    gap: 25px;
+}
+
+@media (max-width: 800px) {
+    .container1 {
+        flex-direction: column;
+    }
+
+    .data,
+    .container1,
+    .container2,
+    .container3,
+    .container4 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .skills {
+        margin-left: 17vw;
+    }
+
+}
+
+@media (max-width: 420px) {
+    * {
+        font-size: 10px;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+
+    h2 {
+        font-size: 14px;
+    }
 }
