--- a/style.css
+++ b/style.css
@@ -91,54 +91,64 @@ footer {
     box-shadow: 8px 12px 21px 6px rgb(28, 7, 29);
 }
 
+.photo-and-icons,
+.contacts-icons,
+.logo-and-name,
+.titles-and-contents,
 .titles,
-.contents {
+.contents,
+.container1,
+.container2,
+.container3,
+.container4 {
     display: flex;
+}
+
+.photo-and-icons,
+.titles,
+.contents,
+.container2,
+.container3,
+.container4 {
     flex-direction: column;
-    gap: 20px;
 }
 
-.titles-and-contents {
-    display: flex;
-    gap: 5vw;
-}
-
-.logo-and-name {
-    display: flex;
+.photo-and-icons {
+    gap: 25px;
     align-items: center;
 }
 
+.contacts-icons {
+    gap: 25px;
+}
+
+.logo-and-name {
+    align-items: center;
+}
+
+.titles-and-contents {
+    gap: 5vw;
+}
+
+.titles,
+.contents {
+    gap: 20px;
+}
+
 .container1 {
-    display: flex;
     gap: 5vw;
     padding: 50px 0 20px 0;
 }
 
 .container2,
 .container3 {
-    padding: 20px 0 20px 0;
-    display: flex;
-    flex-direction: column;
     gap: 25px;
+    padding: 20px 0 20px 0;
 }
 
 .container4 {
-    display: flex;
-    flex-direction: column;
     gap: 25px;
     padding: 20px 0 70px 0;
-}
-
-.photo-and-icons {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    align-items: center;
-}
-
-.contacts-icons {
-    display: flex;
-    gap: 25px;
 }
 
 @media (max-width: 800px) {
@@ -164,14 +174,14 @@ footer {
 
 @media (max-width: 420px) {
     * {
-        font-size: 10px;
+        font-size: 13.5px;
     }
 
     h1 {
-        font-size: 20px;
+        font-size: 23.5px;
     }
 
     h2 {
-        font-size: 14px;
+        font-size: 17.5px;
     }
 }
