--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     font-family: 'Comfortaa', sans-serif;
     font-size: 15px;
     font-weight: 400;
+    -webkit-tap-highlight-color: transparent;
 }
 
 body {
